Applies recording scale factor during solid color analysis

During solid color analysis for RecordingSource, the analysis rect needs
to be scaled by the recording scale factor.

Bug: 765696
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I996e099aa2d5062d165d1d4714b826b312b84e9a
COMPONENT: Chrome OS, Recording Source, Solid Color Analysis
Reviewed-on: https://chromium-review.googlesource.com/672123
Commit-Queue: Malay Keshav <malaykeshav@chromium.org>
Reviewed-by: enne <enne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#503017}
Former-commit-id: 6e66c7480df26431d7fb20fd2d206c0f973884dc