cc/layers/recording_source.cc
@@ -156,7 +156,8 @@ void RecordingSource::DetermineIfSolidColor() {
   TRACE_EVENT1("cc", "RecordingSource::DetermineIfSolidColor", "opcount",
                display_list_->op_count());
   is_solid_color_ = display_list_->GetColorIfSolidInRect(
-      gfx::Rect(GetSize()), &solid_color_, kMaxOpsToAnalyzeForLayer);
+      gfx::ScaleToRoundedRect(gfx::Rect(GetSize()), recording_scale_factor_),
+      &solid_color_, kMaxOpsToAnalyzeForLayer);
 }
 
 }  // namespace cc
